--- a/sprint1/package.json
+++ b/sprint1/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "sprint1",
+  "name": "mals-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "scaledrone-node-push": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
