--- a/sprint1/package.json
+++ b/sprint1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mals-app",
+  "name": "sprint1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "scaledrone-node-push": "^2.2.0",
     "web-vitals": "^2.1.4"
