--- a/sprint1/package.json
+++ b/sprint1/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "netlify-cli": "^17.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
@@ -20,7 +21,6 @@
   },
   "scripts": {
     "start": "concurrently \"npm run start-server\" \"npm run start-frontend\"",
-  
     "start-frontend": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
